added images and write product-grid css

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container d-none d-md-block">
             <div id="infobar" class="row">
                 <div class="col-lg-8 p-0">
-                     <ul class="d-flex gap-3">
+                    <ul class="d-flex gap-3">
                         <li><a href="" class="fa-brands fa-instagram brands-icon"></a></li>
                         <li><a href="" class="fa-brands fa-tiktok brands-icon"></a></li>
                         <li><a href="" class="fa-brands fa-youtube brands-icon"></a></li>
@@ -51,8 +51,8 @@
                 <div class="col-md-2 p-0">
                     <img src="images/logo.png" alt="" class="img-fluid">
                 </div>
-                <div class="col-md-5 c">
-                    <ul class="d-flex gap-4 align-items-center">
+                <div class="col-md-5 d-flex gap-4 align-items-center">
+                    <ul class="d-flex gap-4">
                         <li><a href="" class="nav-links">Shop</a></li>
                         <li><a href="" class="nav-links">Women</a></li>
                         <li><a href="" class="nav-links">Men</a></li>
@@ -62,19 +62,228 @@
                     </ul>
                 </div>
                 <div id="search-box" class="col-md-2 ms-auto d-flex align-items-center">
-                        <input type="search" placeholder="Search" class="border-0 w-100 me-auto">
-                        <i class="fa-solid fa-magnifying-glass"></i>
+                    <input type="search" placeholder="Search" class="border-0 w-100 me-auto">
+                    <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
                 <div class="col-md-2 d-flex align-items-center p-0">
                     <ul class="d-flex gap-4 ms-auto">
                         <li><a href="" class="fa-regular fa-user product-cart-links"></a></li>
                         <li><a href="" class="fa-regular fa-heart product-cart-links"></a></li>
-                        <li><a href="" class="fa-solid fa-cart-shopping product-cart-links"><span class="cart-count">0</span></a></li>
+                        <li><a href="" class="fa-solid fa-cart-shopping product-cart-links"><span
+                                    class="cart-count">0</span></a></li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
+    <div id="sales-offer" class="container-fluid">
+        <div class="row">
+            <div class="col">
+                <ul class="d-flex justify-content-between">
+                    <li><i class="fa-solid fa-percent"></i><span class="offer">Up to - 75%</span></li>
+                    <li><i class="fa-solid fa-ticket"></i><span class="offer">Casual collection sale</span></li>
+                    <li><i class="fa-solid fa-percent"></i><span class="offer">Up to - 75%</span></li>
+                    <li><i class="fa-solid fa-ticket"></i><span class="offer">Casual collection sale</span></li>
+                    <li><i class="fa-solid fa-percent"></i><span class="offer">Up to - 75%</span></li>
+                    <li><i class="fa-solid fa-ticket"></i><span class="offer">Casual collection sale</span></li>
+                    <li><i class="fa-solid fa-percent"></i><span class="offer">Up to - 75%</span></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div id="banner" class="container-fluid">
+        <div class="row">
+            <div class="col position-relative">
+                <img src="images/sport-2-slide3.png"  alt="" class="position-absolute z-0 bg-img">
+                <img src="images/sport-2-slide3-img1.jpg" alt="" class="position-absolute z-1  slider-img start-0">
+                <img src="images/sport-2-slide3-img2.jpg" alt="" class="position-absolute z-1 slider-img end-0 rotate">
+                <div class="banner-head text-center position-relative">
+                    <h1 class="text-uppercase">Get Inspired By Ready-Made Sets of Clothes</h1>
+                    <span>Save time on complete sets</span>
+                    <ul class="d-flex gap-2 justify-content-center mt-4">
+                        <li><a href="" class="banner-links">Sets for Women</a></li>
+                        <li><a href="" class="banner-links">sets for Men</a></li>
+                    </ul>
+                    <a href="" class="stretched-link"></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <section class="container my-5">
+        <div id="discount-bar" class="row">
+            <div class="col-md-4">
+                <h2>BUY MORE, PAY LESS WITH PROMO CODE</h2>
+            </div>
+            <div class="col-md-4"></div>
+            <div class="col-md-4"></div>
+        </div>
+    </section>
+    <section id="products-banners" class="container">
+        <div  class="row">
+            <div class="col-12 mb-4 banner-1">
+                <div class="heading-box">
+                    <h2 class="text-uppercase m-0">Grab the bike by <span class="green">“the horns”</span></h2>
+                    <span class="tagline my-5">Best bikes for everyone</span>
+                    <ul class="d-flex gap-3 ">
+                        <li><a href="" class="shop-links">Mountain</a></li>
+                        <li><a href="" class="shop-links">Road</a></li>
+                        <li><a href="" class="shop-links">City</a></li>
+                        <li><a href="" class="shop-links">e-bikes</a></li>
+                        <li><a href="" class="shop-links">Clothing</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="row row-cols-2 gap-3">
+            <div class="col banner-2">
+                <div class="heading-box">
+                    <h2 class="text-uppercase m-0 h2 w-100">Monitor Your Workouts</h2>
+                    <span class="tagline my-4">Only the best wearables</span>
+                    <a href="" class="shop-btn">Shop Now</a>
+                </div>
+            </div>
+            <div class="col banner-3">
+                <div class="heading-box">
+                    <h2 class="text-uppercase m-0 h2 w-50">Yes For Yoga!</h2>
+                    <span class="tagline my-4">Check Out!</span>
+                    <a href="" class="shop-btn">Shop Now</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="product-grid" class="container my-5">
+        <div class="row grid-heading mb-3">
+            <div class="col-12 d-flex gap-3 align-items-center">
+                <h2>Flash Deals</h2>
+                <div class="timeout d-flex gap-2 p-2">
+                    <span>Ends in</span>
+                    <span class="time">05h</span>
+                    <span class="time">46m</span>
+                    <span class="time">29s</span>
+                </div>
+            </div>
+        </div>
+        <div class="row row-cols-5">
+            <div class="col">
+                <div class="products position-relative">
+                    <div class="product-img">
+                        <img src="images/product.jpeg" class="img-fluid show-img" alt="">
+                        <span class="discount">-14%</span>
+                        <ul class="product-attributes">
+                            <li><a href="" class="fa-regular fa-heart"></a></li>
+                            <li><a href="" class="fa-solid fa-magnifying-glass"></a></li>
+                            <li><a href="" class="fa-solid fa-chart-simple"></a></li>
+                        </ul>
+                        <div class="product-sizes">
+                            <h5>Quick add to cart</h5>
+                            <ul class="d-flex gap-2">
+                                <li><a href="" class="text-uppercase">Xs</a></li>
+                                <li><a href="" class="text-uppercase">s</a></li>
+                                <li><a href="" class="text-uppercase">m</a></li>
+                                <li><a href="" class="text-uppercase">l</a></li>
+                                <li><a href="" class="text-uppercase">xl</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="product-details">
+                        <h3 class="m-0"><a href="" class="product-name">High stretch sports shorts</a></h3>
+                        <span class="price">$79.00 - $110.00</span>
+                    </div>
+                    <a href="puduct.html" class="stretched-link"></a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="products position-relative">
+                    <div class="product-img">
+                        <img src="images/product.jpeg" class="img-fluid show-img" alt="">
+                        <span class="discount">-14%</span>
+                        <ul class="product-attributes">
+                            <li><a href="" class="fa-regular fa-heart"></a></li>
+                            <li><a href="" class="fa-solid fa-magnifying-glass"></a></li>
+                            <li><a href="" class="fa-solid fa-chart-simple"></a></li>
+                        </ul>
+                        <div class="product-sizes">
+                            <h5>Quick add to cart</h5>
+                            <ul class="d-flex gap-2">
+                                <li><a href="" class="text-uppercase">Xs</a></li>
+                                <li><a href="" class="text-uppercase">s</a></li>
+                                <li><a href="" class="text-uppercase">m</a></li>
+                                <li><a href="" class="text-uppercase">l</a></li>
+                                <li><a href="" class="text-uppercase">xl</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="product-details">
+                        <h3 class="m-0"><a href="" class="product-name">High stretch sports shorts</a></h3>
+                        <span class="discount-price">$21.00</span>
+                        <del class="actual-price">$70.00</del>
+                    </div>
+                    <a href="puduct.html" class="stretched-link"></a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="products position-relative">
+                    <div class="product-img">
+                        <img src="images/product.jpeg" class="img-fluid show-img" alt="">
+                        <span class="discount">-14%</span>
+                        <ul class="product-attributes">
+                            <li><a href="" class="fa-regular fa-heart"></a></li>
+                            <li><a href="" class="fa-solid fa-magnifying-glass"></a></li>
+                            <li><a href="" class="fa-solid fa-chart-simple"></a></li>
+                        </ul>
+                        <a href="" class="add-cart">+ Add to cart</a>
+                    </div>
+                    <div class="product-details">
+                        <h3 class="m-0"><a href="" class="product-name">High stretch sports shorts</a></h3>
+                        <span class="discount-price">$21.00</span>
+                        <del class="actual-price">$70.00</del>
+                    </div>
+                    <a href="puduct.html" class="stretched-link"></a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="products position-relative">
+                    <div class="product-img">
+                        <img src="images/product.jpeg" class="img-fluid show-img" alt="">
+                        <span class="discount">-14%</span>
+                        <ul class="product-attributes">
+                            <li><a href="" class="fa-regular fa-heart"></a></li>
+                            <li><a href="" class="fa-solid fa-magnifying-glass"></a></li>
+                            <li><a href="" class="fa-solid fa-chart-simple"></a></li>
+                        </ul>
+                        <a href="" class="add-cart">+ Add to cart</a>
+                    </div>
+                    <div class="product-details">
+                        <h3 class="m-0"><a href="" class="product-name">High stretch sports shorts</a></h3>
+                        <span class="discount-price">$21.00</span>
+                        <del class="actual-price">$70.00</del>
+                    </div>
+                    <a href="puduct.html" class="stretched-link"></a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="products position-relative">
+                    <div class="product-img">
+                        <img src="images/product.jpeg" class="img-fluid show-img" alt="">
+                        <span class="discount">-14%</span>
+                        <ul class="product-attributes">
+                            <li><a href="" class="fa-regular fa-heart"></a></li>
+                            <li><a href="" class="fa-solid fa-magnifying-glass"></a></li>
+                            <li><a href="" class="fa-solid fa-chart-simple"></a></li>
+                        </ul>
+                        <a href="" class="add-cart">+ Add to cart</a>
+                    </div>
+                    <div class="product-details">
+                        <h3 class="m-0"><a href="" class="product-name">High stretch sports shorts</a></h3>
+                        <span class="discount-price">$21.00</span>
+                        <del class="actual-price">$70.00</del>
+                    </div>
+                    <a href="puduct.html" class="stretched-link"></a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <br><br><br><br><br><br><br><br><br><br>
 </body>
 
 </html>
