--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
         <div class="container d-none d-md-block">
             <div id="infobar" class="row">
-                <div class="col-lg-8 p-0">
+                <div class="col-xxl-8 col-lg-6 col-md-2 p-0">
                     <ul class="d-flex gap-3">
                         <li><a href="" class="fa-brands fa-instagram brands-icon"></a></li>
                         <li><a href="" class="fa-brands fa-tiktok brands-icon"></a></li>
@@ -28,7 +28,7 @@
                         <li><a href="" class="fa-brands fa-facebook brands-icon"></a></li>
                     </ul>
                 </div>
-                <div class="col-lg-2 ms-auto">
+                <div class="col-xxl-2 col-md-2 ms-auto">
                     <ul class="d-flex gap-3">
                         <li><a href="" class="pages">About</a></li>
                         <li><a href="" class="pages">Help</a></li>
@@ -36,7 +36,7 @@
                         <li><a href="" class="pages">Blog</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-2 p-0">
+                <div class="col-xxl-2  col-lg-3 col-md-4 p-0">
                     <ul class="d-flex gap-2 align-items-center float-end">
                         <li><img src="images/download.png" alt="" class="img-fluid"></li>
                         <li><a href="" class="info-btn">English<i class="fa-solid fa-angle-down"></i></a></li>
@@ -48,12 +48,18 @@
         <hr class="m-0">
     </header>
     <nav class="container-fluid position-sticky top-0 z-3">
-        <div id="navbar" class="row px-5">
-            <div class="col-md-2 p-0">
+        <div id="navbar" class="row  px-lg-4 px-3 gap-3 justify-content-sm-center justify-content-between">
+            <div class="col-2 d-md-none">
+                <ul class="d-flex gap-3 gap-xl-4 ms-auto d-md-none">
+                    <li><a href="" class="fa-solid fa-bars product-cart-links d-block d-xl-none"></a></li>
+                    <li><a href="" class="fa-solid fa-magnifying-glass product-cart-links"></a></li>
+                </ul>
+            </div>
+            <div class="col-2 p-0 order-md-0 order-1">
                 <img src="images/logo.png" alt="" class="img-fluid">
             </div>
-            <div class="col-md-5 d-flex gap-4 align-items-center">
-                <ul class="d-flex gap-4">
+            <div class="col-md-5 d-none d-xl-block">
+                <ul class="d-flex flex-wrap gap-4 my-auto">
                     <li><a href="" class="nav-links">Shop</a></li>
                     <li><a href="" class="nav-links">Women</a></li>
                     <li><a href="" class="nav-links">Men</a></li>
@@ -62,14 +68,15 @@
                     <li><a href="" class="nav-links">Pages</a></li>
                 </ul>
             </div>
-            <div id="search-box" class="col-md-2 ms-auto d-flex align-items-center">
-                <input type="search" placeholder="Search" class="border-0 w-100 me-auto">
-                <i class="fa-solid fa-magnifying-glass"></i>
+            <div id="search-box" class="col-2 flex-grow-1 ms-auto p-2 d-none d-md-block">
+                <input type="search" placeholder="Search" class="border-0 w-75 me-auto">
+                <i class="fa-solid fa-magnifying-glass float-end p-1"></i>
             </div>
-            <div class="col-md-2 d-flex align-items-center p-0">
-                <ul class="d-flex gap-4 ms-auto">
+            <div class="col-2 d-flex align-items-center p-0 order-2">
+                <ul class="d-flex gap-1 gap-sm-3 gap-xl-4 ms-auto">
+                    <li><a href="" class="fa-solid fa-bars product-cart-links d-block d-xl-none d-none d-md-block"></a></li>
                     <li><a href="" class="fa-regular fa-user product-cart-links"></a></li>
-                    <li><a href="" class="fa-regular fa-heart product-cart-links"></a></li>
+                    <li><a href="" class="fa-regular fa-heart product-cart-links d-none d-md-block"></a></li>
                     <li><a href="" class="fa-solid fa-cart-shopping product-cart-links"><span
                                 class="cart-count">0</span></a></li>
                 </ul>
@@ -77,8 +84,8 @@
         </div>
     </nav>
     <div id="sales-offer" class="container-fluid ">
-        <div class="row ">
-            <div class="col">
+        <div class="row">
+            <div class="col-12">
                 <ul class="d-flex justify-content-between">
                     <li><i class="fa-solid fa-percent"></i><span class="offer">Up to - 75%</span></li>
                     <li><i class="fa-solid fa-ticket"></i><span class="offer">Casual collection sale</span></li>
@@ -104,18 +111,37 @@
                         <li><a href="" class="banner-links">Sets for Women</a></li>
                         <li><a href="" class="banner-links">sets for Men</a></li>
                     </ul>
-                    <a href="" class="stretched-link"></a>
                 </div>
             </div>
         </div>
     </div>
     <section class="container my-5">
-        <div id="discount-bar" class="row">
+        <div id="discount-bar" class="row align-items-center">
             <div class="col-md-4">
                 <h2>BUY MORE, PAY LESS WITH PROMO CODE</h2>
             </div>
-            <div class="col-md-4"></div>
-            <div class="col-md-4"></div>
+            <div class="col-md-4 d-flex gap-5 align-items-center">
+                <div class="d-flex flex-column  align-items-center">
+                    <span class="discount-number">$ 50</span>
+                    <span>For orders over $600</span>
+                </div>
+                <div class="d-flex gap-3 position-relative coupon">
+                    <span>400-more</span>
+                    <i class="fa-regular fa-window-restore"></i>
+                    <a href="" class="stretched-link"></a>
+                </div>
+            </div>
+            <div class="col-md-4 d-flex gap-5 align-items-center">
+                <div class="d-flex flex-column  align-items-center">
+                    <span class="discount-number">$ 100</span>
+                    <span>For orders over $600</span>
+                </div>
+                <div class="d-flex gap-3 position-relative coupon">
+                    <span>800-more</span>
+                    <i class="fa-regular fa-window-restore"></i>
+                    <a href="" class="stretched-link"></a>
+                </div>
+            </div>
         </div>
     </section>
     <section id="products-banners" class="container p-0">
@@ -416,7 +442,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="" class="more-products p-0 text-black">Show all Tennis products</a>
+                <a href="" class="text-decoration-underline p-0 text-black">Show all Tennis products</a>
             </div>
     </section>
     <section class="container">
@@ -478,7 +504,7 @@
                 </div>
             </div>
         </div>
-        <div class="post-slider w-100 rounded-3"></div>
+        <div class="post-slider w-100 rounded-3 my-4"></div>
     </section>
     <section id="social-media" class="container-fluid py-5">
         <div class="row align-items-center">
@@ -543,8 +569,8 @@
     <hr>
     <footer>
         <div class="container">
-            <div id="footer" class="row row-cols-6">
-                <div class="col">
+            <div id="footer-sidebar" class="row">
+                <div class="col-2">
                     <div class="widgets">
                         <h5>Shop</h5>
                         <ul class="d-flex gap-2 flex-column ">
@@ -557,7 +583,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-2">
                     <div class="widgets">
                         <h5>Information</h5>
                         <ul class="d-flex gap-2 flex-column ">
@@ -570,7 +596,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-2">
                     <div class="widgets">
                         <h5>Account</h5>
                         <ul class="d-flex gap-2 flex-column ">
@@ -582,29 +608,74 @@
                         </ul>
                     </div>
                     </div>
-                <div class="col">
+                <div class="col-4">
                     <div class="widgets">
                         <h5>Categories</h5>
+                        <div class="d-flex justify-content-between">
+                            <ul class="d-flex gap-2 flex-column">
+                                <li><a href=""><i class="fa-regular fa-futbol"></i>Football</a></li>
+                                <li><a href=""><i class="fa-solid fa-baseball"></i>Basketball</a></li>
+                                <li><a href=""><i class="fa-solid fa-person-biking"></i>Cycling</a></li>
+                                <li><a href=""><i class="fa-solid fa-golf-ball-tee"></i>Golf</a></li>
+                                <li><a href=""><i class="fa-solid fa-dumbbell"></i>Accessories</a></li>
+                            </ul>
+                            <ul class="d-flex gap-2 flex-column">
+                                <li><a href=""><i class="fa-solid fa-person-hiking"></i>Hiking</a></li>
+                                <li><a href=""><i class="fa-solid fa-person-skating"></i>Ice-Staking</a></li>
+                                <li><a href=""><i class="fa-solid fa-football"></i>Rugby</a></li>
+                                <li><a href=""><i class="fa-solid fa-person-skating"></i>Skateboard</a></li>
+                                <li><a href=""><i class="fa-solid fa-person-snowboarding"></i>Snowboard</a></li>
+                            </ul>
+                            <ul class="d-flex gap-2 flex-column">
+                                <li><a href=""><i class="fa-solid fa-person-swimming"></i>Swimming</a></li>
+                                <li><a href=""><i class="fa-solid fa-table-tennis-paddle-ball"></i>Tennis</a></li>
+                                <li><a href=""><i class="fa-solid fa-volleyball"></i>Volleyball</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div class="widgets">
+                        <h5>Follows us</h5>
                         <ul class="d-flex gap-2 flex-column flex-wrap">
-                            <li><a href="">Shop</a></li>
-                            <li><a href="">Women</a></li>
-                            <li><a href="">Men</a></li>
-                            <li><a href="">Shoes</a></li>
-                            <li><a href="">Accessories</a></li>
-                            <li><a href="">Accessories</a></li>
-                            <li><a href="">Accessories</a></li>
-                            <li><a href="">Accessories</a></li>
-                            <li><a href="">Accessories</a></li>
-                            <li><a href="">Accessories</a></li>
-                            <li><a href="">Sale</a></li>
+                            <li><a href=""><i class="fa-brands fa-instagram"></i>Instagram</a></li>
+                            <li><a href=""><i class="fa-brands fa-tiktok"></i>Tiktok</a></li>
+                            <li><a href=""><i class="fa-brands fa-facebook-f"></i>Facebook</a></li>
+                            <li><a href=""><i class="fa-brands fa-youtube"></i>Youtube</a></li>
+                            <li><a href=""><i class="fa-brands fa-twitter"></i>Twitter</a></li>
                         </ul>
                     </div>
                 </div>
-                <div class="col"></div>
+            </div>
+            <div class="row g-5 my-4">
+                <div class="col-2">
+                    <img src="images/logo.png" alt="" class="img-fluid w-100">
+                </div>
+                <div class="col-2">
+                    <address>29 SE 2nd Ave, Miami, Florida 33131, United States</address>
+                </div>
+                <div class="col-2">
+                    <div>
+                        <span id="phone-no" class="mb-3">(786) 425-1900</span>
+                        <a href="" id="company-email" class="text-decoration-underline">contact@example.com</a>
+                    </div>
+                </div>
+            </div>
+            <div id="footer" class="row py-5">
+                <div class="col-9">
+                    <ul class=" d-flex gap-3">
+                        <li>  <span>Copyright © 2023 loobek. All Rights Reserved</span></li>
+                        <li><a href="">Terms of Use</a></li>
+                        <li><a href="">Affiliate Program</a></li>
+                        <li><a href="">Accessibility</a></li>
+                    </ul>
+                </div>
+                <div class="col-3">
+                    <img src="images/payment-icons.png" alt="" class="img-fluid w-100">
+                </div>
             </div>
         </div>
     </footer>
-    <br><br><br><br><br><br><br><br><br><br>
 </body>
 
 </html>
